# api

./: .env.example  README.MD  Rocket.toml  docker-compose.yml  ~
ansible/: README.MD  compile_api.yml  hosts  playbook.yml  repository_setup.yml  run_api.yml  run_database.yml  (+1 more)
server/: Cargo.toml  Dockerfile  Rocket.toml  rustc-ice-2023-12-04T21:43:13.868936Z-39829.txt  rustc-ice-2023-12-04T21:43:17.729693Z-39844.txt  rustc-ice-2023-12-04T21:43:31.090275Z-39874.txt  rustc-ice-2023-12-04T21:43:58.144359Z-39922.txt  rustc-ice-2023-12-04T21:44:42.342801Z-40007.txt  rustc-ice-2023-12-04T21:45:02.686131Z-40064.txt  rustc-ice-2023-12-04T21:47:06.071493Z-2155.txt
server/crates/api/: Cargo.toml
server/crates/api/src/: api.rs  cors.rs  lib.rs  server.rs  settings.rs  testing.rs
server/crates/api/src/api_telemetry/: fairing.rs  mod.rs
server/crates/api/src/model/: api_socket_addr.rs  login.rs  mod.rs  organisation_id.rs  organization_init.rs  organization_member.rs  organization_server.rs  project.rs  project_init.rs  server_id.rs  service_login.rs  user_id.rs  user_token.rs
server/crates/api/src/route/: mod.rs  organization.rs
server/crates/api/src/route/asset/: mod.rs  route_create_asset.rs  route_delete_asset.rs
server/crates/api/src/route/comment/: mod.rs  route_create_comment.rs  route_delete_comment.rs
server/crates/api/src/route/organization/: mod.rs  route_add_member.rs  route_add_server.rs  route_create.rs  route_create_project.rs  route_delete_from_id.rs  route_delete_member.rs  route_delete_project.rs  route_from_id.rs  route_get_projects_from_organization.rs  route_project_from_id.rs  route_remove_server.rs  route_update.rs  route_update_project.rs
server/crates/api/src/route/user/: helper.rs  mod.rs  route_access_server.rs  route_add_perm.rs  route_check_license.rs  route_check_perm.rs  route_create_license.rs  route_delete_from_id.rs  route_delete_from_token.rs  route_email_exists.rs  route_from_email.rs  route_from_id.rs  route_from_token.rs  route_get.rs  route_get_licenses.rs  route_has_access.rs  route_organizations.rs  route_register.rs  route_remove_perm.rs  route_renew.rs  route_server_authenticate.rs  route_server_disconnect.rs  route_update.rs  route_update_auth.rs
server/crates/database/: Cargo.toml
server/crates/database/src/: database.rs  lib.rs
server/crates/database/src/managers/: assets.rs  comments.rs  licenses.rs  mod.rs  organization.rs  peer.rs  permission.rs  projects.rs  user.rs
server/crates/database/src/models/: asset.rs  authentication.rs  comment.rs  group.rs  license.rs  login.rs  mod.rs  organization.rs  peer.rs  permission.rs  project.rs  token.rs  user.rs
server/crates/telemetry/: Cargo.toml
server/crates/telemetry/src/: lib.rs  settings.rs
server/crates/telemetry/src/provider/: meter.rs  tracer.rs
server/src/: main.rs  update_env.rs
(+9 files in other folders)
