[package]
name = "server"
authors = ["Paul COMTE <paul.codepro@gmail.com>", "Benoit BRUNET <benoit.brunet@epitech.eu>"]
version = "0.1.0"
edition = "2021"
default-run = "server"

[workspace]
members = ["crates/*"]

[dependencies]
api = { path = "crates/api" }
database = { path = "crates/database" }
clap = "4.2.7"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[[bin]]
name = "server"
path = "src/main.rs"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

# A profile which compiles all (non-workspace) dependencies in release mode
# but Grisked code in dev mode. This gives a good debugging experience for your
# code and fast performance of other people's code. After the initial
# build subsequent ones are as fast as dev mode builds.
# See https://doc.rust-lang.org/cargo/reference/profiles.html
# To use this profile:
#   cargo build --profile fastdev
#   cargo run --profile fastdev --bin grisked
[profile.fastdev.package."*"]
opt-level = 3

[profile.fastdev]
inherits = "dev"
