[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
serde = "1.0.143"
serde_json = "1.0.83"
reqwest = { version = "0.11.14", features = ["multipart", "json"]}
async-trait = "0.1.64"
rand = "0.8.5"
rocket_okapi = { version = "0.8.0-rc.2", features = ["rapidoc"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
