[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.143"
serde_json = "1.0.83"
mongodb = "2.3.0"
tokio = "1.24.2"
rand = "0.8.5"
rocket_okapi = "0.8.0-rc.2"
futures = "0.3.26"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]